--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "compile": "node ./ethereum/compile"
+    "compile": "node ./ethereum/compile",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.0.18",
     "fs-extra": "^8.1.0",
     "mocha": "^6.2.0",
+    "next": "^9.0.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "solc": "^0.5.11",
     "web3": "^1.2.1"
   }
