--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "solc": "^0.5.11",
     "web3": "^1.2.1"
   }
