--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.0.18",
+    "@zeit/next-css": "^1.0.1",
     "fs-extra": "^8.1.0",
     "mocha": "^6.2.0",
     "next": "^9.0.6",
