--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^8.1.0",
     "mocha": "^6.2.0",
     "next": "^9.0.6",
+    "next-routes": "^1.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "semantic-ui-css": "^2.4.1",
