--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha",
     "compile": "node ./ethereum/compile",
+    "deploy": "node ./ethereum/deploy",
     "dev": "node server.js",
     "build": "next build",
     "start": "next start"
